# ultralight

./: .env.example  .gitignore  Dockerfile  FINETUNING_READINESS_AUDIT.md  FLASH_FINETUNE_DATA_PR_PLAN.md  LAUNCH_FOLLOWUPS.md  PERSONAL-APPS-TEST-PLAN.md  PLAN-resource-expansion.md  PLAN.md  README.md  backfill-storage-bytes.sql  deno.json  migration-add-d1-tracking.sql  migration-api-tokens.sql  migration-app-impression-rpc.sql  migration-app-store-listing.sql  migration-arg-constraints.sql  migration-auto-topup.sql  migration-budget-atomic.sql  migration-byok.sql  migration-content-likes.sql  migration-earnings-tracking.sql  migration-featured-apps.sql  migration-fractional-cents.sql  migration-gaps-points-billing.sql  migration-gpu-phase1.sql  migration-gpu-phase2.sql  migration-gpu-phase3.sql  migration-had-external-db.sql  migration-light-currency.sql  migration-marketplace.sql  migration-mcp-skills.sql  migration-oauth-clients.sql  migration-oauth-provider.sql  migration-per-app-billing.sql  migration-phase1.sql  migration-platform-mcp-v2.sql  migration-provisional.sql  migration-rls-lockdown.sql  migration-storage-tiers.sql  (+9 more)
.do/: app.yaml
api/: .dev.vars.example  analysis-unused-baseline.json  deno.check.json  knip.json  main.ts  main.ts.bak  package-lock.json  package.json  tsconfig.check.json  tsconfig.json  typecheck-baseline.txt  (+1 more)
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: db.rs  lib.rs  secure_storage.rs  system.rs
desktop/src-tauri/src/tools/: fs.rs  shell.rs
(+1044 files in other folders)
